# minimum-dependency-versions

./: .gitignore  .pre-commit-config.yaml  README.md  action.yaml  minimum_versions.py  policy.yaml  policy_no_extra_options.yaml  pyproject.toml  requirements.txt  test_script.py
.github/workflows/: ci.yml  pypi.yml
envs/: env2.yaml  env3.yaml  failing-env2.yaml  pixi.toml
minimum_versions/: __main__.py  formatting.py  main.py  policy.py  release.py  spec.py
minimum_versions/environments/: __init__.py  conda.py  pixi.py  spec.py
minimum_versions/tests/: test_environments.py  test_policy.py  test_release.py  test_spec.py
